--- a/pomodoro-hub.html
+++ b/pomodoro-hub.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Advanced Pomodoro Tool</title>
+
 <style>
     *{
   font-family: 'Work Sans', sans-serif;
@@ -110,8 +117,8 @@ input[type="radio"]:checked + .page{
 }
 </style>
 
-<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600,700&display=swap" rel="stylesheet">
-
+</head>
+<body>
 <div class="layout">
   <input name="nav" type="radio" class="nav home-radio" id="home" checked="checked" />
   <div class="page home-page">
@@ -141,3 +148,5 @@ input[type="radio"]:checked + .page{
       </span>
     </label>
 </div>
+</body>
+</html>
