--- a/vvip-dashboard-final.html
+++ b/vvip-dashboard-final.html
@@ -156,8 +156,7 @@
                 <button onclick="openPopup('https://saikat-0.github.io/babla-vvip-tools-4in1.html', 'imageTool')">Vvip Image ++</button>
                 <button onclick="openPopup('https://snapinsta.app/', 'InstaDL')">Instagram pic - DL</button>
                 <button onclick="openPopup('https://images.google.com/', 'googleImgSearch')">Google img Search</button>
-                <button onclick="openPopup('https://saikat-0.github.io/Vvip-Pomodoro.html', 'Saikat Pomodoro')">Saikat Pomodoro</button>
-                <button onclick="openPopup('https://saikat-0.github.io/pomodoro-2.html', 'Babla Pomodoro')">Babla Pomodoro</button>
+                <button onclick="openPopup('https://saikat-0.github.io/pomodoro-hub.html', 'Pomodoro+Analytics')">Pomodoro+Analytics</button>
                 
             </div>
         </div>
